objects/Cloud_Billing_Report_Instance__c.object
<CustomObject>
    <description>Individual Report Request. Child of the parent request. Represents a single report from the parents report type list, but can contain multiple Platform Identifiers to pull from the data</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Cloud_Billing_Report_Request__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Billing_Report_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing
Help Text: Used to store lookup to Cloud Billing Request if such a record exists</description>
        <inlineHelpText>Used to store lookup to Cloud Billing Request if such a record exists</inlineHelpText>
        <label>Cloud Billing Report Request</label>
        <referenceTo>Cloud_Billing_Report_Request__c</referenceTo>
        <relationshipLabel>Cloud Billing Report Instances</relationshipLabel>
        <relationshipName>Cloud_Billing_Report_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing 
End Date/Time for PureVoice Revenue Request</description>
        <inlineHelpText>End Date/Time for PureVoice Revenue Request</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Id_List__c</fullName>
        <label>Platform Id List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <formula>Year__c &amp; &apos;-&apos; &amp; IF(LEN(Month__c) == 1 , &apos;0&apos; , &apos;&apos;) &amp; Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Instance_Hash__c</fullName>
        <formula>Month__c + &apos;#&apos; + Year__c + &apos;#&apos; + Report_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Instance Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing 
Start Date/Time for PureVoice Revenue Request</description>
        <inlineHelpText>Start Date/Time for PureVoice Revenue Request</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Cloud Billing Report Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>File_URL__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureVoice_Revenue_Request</fullName>
        <columns>NAME</columns>
        <columns>Platform_Id_List__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cloud_Billing_Report_Instance__c.PureVoice_Revenue_Request</value>
        </filters>
        <label>PureVoice Revenue Request</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CBRI-{0000}</displayFormat>
        <label>Cloud Billing Report Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Billing Report Instances</pluralLabel>
    <recordTypes>
        <fullName>ETL_Detail_Report</fullName>
        <active>true</active>
        <label>ETL Detail Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>PureVoice_Revenue_Request</fullName>
        <active>true</active>
        <label>PureVoice Revenue Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>